endrert på at endringssøknad blir kalkulert fra format, tilpasset validering